--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.4.2",
     "@tanstack/react-query": "^5.32.0",
+    "@tanstack/react-query-devtools": "^5.44.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "color-thief-react": "^2.1.0",
